<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormPackage.MyForm"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/toolbar"
    android:background="@color/colorPrimary"
    app:title="MyForm">

</androidx.appcompat.widget.Toolbar>


<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:src="@drawable/ic_refresh_black_24dp"
        app:backgroundTint="#C9C3C3"
        app:elevation="@dimen/cardview_default_radius"
        app:fabSize="normal" />

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTxt1"
        android:hint="@string/editText1"
        android:layout_marginTop="10dp"/>

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTxt2"
        android:hint="@string/editText2"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt3"
        android:textSize="25sp"
        android:id="@+id/txt2"
        android:layout_marginTop="10dp"/>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">


        <RadioButton
            android:id="@+id/rBtn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/rBtn1" />

        <RadioButton
            android:id="@+id/rBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/rBtn2" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:textSize="25sp"
        android:id="@+id/txt3"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTxt3"
        android:layout_marginTop="10dp"
        android:hint="@string/editText3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pick_date"
        android:onClick="clickDatePicker" />


    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/tBtn1"
        android:textOn="@string/tBtn2"
        android:id="@+id/togglebtn"
        android:layout_marginTop="10dp"
        android:background="@drawable/ripple"/>


</LinearLayout>