<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:title="Rate Us"
        app:titleMarginStart="150dp"
        app:titleTextColor="@color/colorBlue">

        <ImageView
            android:id="@+id/toolbar_logo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_menu_black_24dp"
            android:contentDescription="@string/imgView" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtView"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/colorBlue"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:isIndicator="true"
        android:stepSize="1"
        android:layout_gravity="center"
        android:progressTint="#ffd700"
        android:rating="1"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txtView1"
        android:textColor="#33302F"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtView2"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtView3"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etText1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorBlue"
        android:gravity="center"
        android:text="@string/btn"
        android:textColor="#F3F3F3"
        android:textStyle="bold"/>

</LinearLayout>