<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Rate Us"
        app:titleMarginStart="150dp"
        app:titleTextColor="@color/colorBlue">

        <ImageView
            android:id="@+id/toolbar_logo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imgView"
            android:src="@drawable/ic_menu_black_24dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txtView"
        android:textColor="@color/colorBlue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:isIndicator="true"
        android:numStars="5"
        android:progressTint="#ffd700"
        android:rating="1"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="@id/textView"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txtView1"
        android:textColor="#33302F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/rating"
        app:layout_constraintStart_toStartOf="@id/rating"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtView2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/textView1"
        app:layout_constraintStart_toStartOf="@id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etText"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtView3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/editText"
        app:layout_constraintStart_toStartOf="@id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etText1"
        app:layout_constraintEnd_toEndOf="@id/textView3"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:gravity="center"
        android:text="@string/btn"
        android:textColor="#F3F3F3"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/editText1"
        app:layout_constraintStart_toStartOf="@id/editText1"
        app:layout_constraintTop_toBottomOf="@+id/editText1"/>


</androidx.constraintlayout.widget.ConstraintLayout>